--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,30 +8,10 @@
   </head>
   <body>
     <!-- Navbar (sit on top) -->
-    <nav class="ps-top">
-      <div class="ps-bar ps-white ps-padding ps-card ps-nav">
-        <a href="#home" class="ps-bar-item ps-button">Pimienta & Sal</a>
-        <!-- Right-sided navbar links. Hide them on small screens -->
-        <div class="ps-right ps-hide-small">
-          <a href="#about" class="ps-bar-item ps-button">About</a>
-          <a href="#menu" class="ps-bar-item ps-button">Menu</a>
-        </div>
-      </div>
-    </nav>
+    <%- include("./partials/nav.ejs") %> 
 
     <!-- Header -->
-    <header class="ps-display-container ps-content ps-wide" id="home">
-      <img
-        class="ps-image"
-        src="/images/header.jpg"
-        alt="Pimienta & Sal"
-        width="1600"
-        height="800"
-      />
-      <div class="ps-display-bottomleft ps-padding-large ps-opacity">
-        <h1 class="ps-xxlarge">Sabores que enamoran</h1>
-      </div>
-    </header>
+    <%- include("./partials/header.ejs") %> 
 
     <!-- Page content -->
     <div class="ps-content">
@@ -42,13 +22,12 @@
             src="/images/principal.jpg"
             class="ps-round ps-image ps-opacity-min"
             alt="SAbores que enamoran"
-            width="600"
-            height="750"
+            width="600px"
           />
         </div>
 
         <div class="ps-col m6 ps-padding-large">
-          <h1 class="ps-center">Pimienta & Sal</h1>
+          <h1 class="ps-center">About Pimienta & Sal</h1>
           <br />
           <p class="ps-large">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur
@@ -71,48 +50,10 @@
 
       <hr />
       <!-- Menu Section -->
-      <div class="ps-row ps-padding-64" id="menu">
-        <div class="ps-col l6 ps-padding-large">
-          <h1 class="ps-center">Nuentro Menu</h1>
-          <br />
-          <h4>Carpaccio fresco</h4>
-          <p class="ps-text-grey">
-            Entrada Carpaccio de salmón con cítricos U$S 65.50
-          </p>
-          <br />
-
-          <h4>Risotto de berenjena</h4>
-          <p class="ps-text-grey">
-            Risotto de berenjena y queso de cabra U$S 47.00
-          </p>
-          <br />
-
-          <h4>Mousse de arroz</h4>
-          <p class="ps-text-grey">
-            Mousse de arroz con leche y aroma de azahar U$S 27.50
-          </p>
-          <br />
-
-          <h4>Espárragos blancos</h4>
-          <p class="ps-text-grey">
-            Espárragos blancos con vinagreta de verduras y jamón ibérico U$S
-            37.50
-          </p>
-        </div>
-
-        <div class="ps-col l6 ps-padding-large ps-img-menu">
-          <img
-            src="/images/menu.jpg"
-            class="ps-round ps-image ps-opacity-min"
-            alt="Menu"
-          />
-        </div>
-      </div>
+      
 
       <!-- Footer -->
-      <footer class="ps-center ps-light-grey ps-padding-32">
-        <p>Powered by Pimienta & Sal</p>
-      </footer>
+      <%- include("./partials/footer.ejs") %> 
     </div>
   </body>
 </html>
